--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -12,8 +12,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -24,7 +24,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -71,23 +71,33 @@ p {
     margin: 0 auto;
 }
 
-.top-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin-bottom: 20px;
-    border-bottom: 1px dashed black;
+.underline {
+	border-bottom: 1px dashed black;
 }
 
-.top-content .text-container {
+.body-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.content-container {
     width: 48%;
     padding: 0 1%;
-    padding-bottom: 20px;  
+    padding-bottom: 20px;
+		margin-top: 20px;
+}
+
+.page-width-container {
+	width: 98%;
+	padding: 0 1%;
+	padding-bottom: 20px;
+	margin-top: 20px;
 }
 
 .middle-content {
     margin-bottom: 20px;
-    border-bottom: 1px dashed black;
 }
 
 .middle-content h2 {
@@ -101,7 +111,7 @@ p {
     justify-content: space-evenly;
 }
 
-.middle-content .boxes .box {
+.box {
     width: 12.5%;
     height: 100px;
     background: black;
@@ -143,4 +153,59 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+nav ul {
+	margin: 25px 0;
+	display: flex;
+	display: flex;
+	align-items: flex-end;
+	justify-content: space-between;
+}
+.topNavItem{
+	text-decoration: none;
+	color: black;
+}
+.topNavItem:hover{
+	color: grey;
+}
+.box1 {
+	background-color: #008080;
+}
+.box2 {
+	background-color: #FFD702;
+}
+.box3 {
+	background-color: #5F9EA0;
+}
+.box4 {
+	background-color: #FF7F50;
+}
+.box5 {
+	background-color: #DC153B;
+}
+.box6 {
+	background-color: #238B22;
+}
+.box7 {
+	background-color: #9932CC;
+}
+.box8 {
+	background-color: #FF69B4;
+}
+.box9 {
+	background-color: #4B0082;
+}
+.box10 {
+	background-color: #1F8FFF;
+}
+
+button {
+	font-size: 18px;
+	border: 2px solid black;
+	padding: 8px 30px;
+	border-radius: 12px;
+}
+button:hover {
+	background-color: grey;
 }
